[package]
name = "bpf-iwr-ace"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.9.0"
borsh-derive = "0.9.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
solana-program = "1.7.10"
spl-token = { version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = "1.0.3"
thiserror = "1.0.26"

[dev-dependencies]
solana-program-test = "1.7.10"
solana-client = "1.7.10"
solana-sdk = "1.7.10"

[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]
